Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List_Item__c/B2B_Shopping_List_Item__c.object-meta.xml
<CustomObject>
    <label>B2B Shopping List Item</label>
    <nameField>
        <label>B2B Shopping List Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Shopping List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>