Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List_Item__c/fields/B2B_Quantity__c.field-meta.xml
<CustomField>
    <fullName>B2B_Quantity__c</fullName>
    <label>B2B Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>