Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List_Item__c/fields/B2B_Shopping_List__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shopping_List__c</fullName>
    <label>B2B Shopping List</label>
    <referenceTo>B2B_Shopping_List__c</referenceTo>
    <relationshipLabel>B2B Shopping List Items</relationshipLabel>
    <relationshipName>B2B_Shopping_List_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>